--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,14 @@
-<%= image_tag('nhl-logo.png') %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+        <%= image_tag('nhl-logo.png') %>
+    </div>
+    <div class="col">
+      Column
+    </div>
+  </div>
+</div>
+
