--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: #12181f;
+  color: #f2f3f3;
   margin: 33px; }
 
 body, p, ol, ul, td {
