--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,5 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-        <%= image_tag('nhl-logo.png') %>
-    </div>
-    <div class="col">
-      Column
-    </div>
+<div class="row">
+  <div class="col text-center">
+    Column
   </div>
 </div>
-
