Sass variables working

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #12181f;
-  color: #f2f3f3;
+  background-color: $body-background;
+  color: $primary-white;
   margin: 33px; }
 
 body, p, ol, ul, td {
