Create nav bar and page styling

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,7 +1,6 @@
 body {
   background-color: $body-background;
-  color: $primary-white;
-  margin: 33px; }
+  color: $primary-white;}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
