--- a/app/views/_nav.html.erb
+++ b/app/views/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-5">
     <nav class="navbar navbar-dark bg-dark shadow">
         <%= image_tag("nhl-logo.png", size: "75x75") %>
     </nav>
