--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
-<div class="row">
-  <div class="col text-center">
-    <div class="card">
-      <div class="card-body">
-        This is some text within a card body.
-      </div>
+<div class="row mb-4">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10">
+    <div class="card text-white bg-dark mb-3">
+      <h5 class="card-header">NHL Goals Leader</h5>
+      <%= image_tag('chart-dummy.png') %>
     </div>
   </div>
 </div>
