Cut players to only forwards

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,21 @@
   </div>
   <div class="col-md-10">
     <div class="card text-white bg-dark mb-3">
-      <h5 class="card-header">NHL Goals Leader</h5>
-      <%= image_tag('chart-dummy.png') %>
+      <div class="card-body">
+        <h5 class="card-header">NHL Goals Leader</h5>
+        <%= image_tag('chart-dummy.png') %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row mb-4">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10 text-center">
+    <div class="card text-white bg-dark mb-3">
+      <div class="card-body"> 
+        <p class="card-text">Yeo I made this. Contact info? Go Sharks!</p>
+      </div>
     </div>
   </div>
 </div>
