Getting d3 working in rails

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <div class="card text-white bg-dark mb-3">
       <div class="card-body">
         <h5 class="card-header">NHL Goals Leader</h5>
-        <%= image_tag('chart-dummy.png') %>
+        <div id="chart-area"></div>
       </div>
     </div>
   </div>
