Generate static data and build basic chart

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
   <div class="col-md-10 text-center">
     <div class="card text-white bg-dark mb-3">
       <div class="card-body"> 
-        <p class="card-text">Yeo I made this. Contact info? Go Sharks!</p>
+        <p class="card-text">Footer!</p>
       </div>
     </div>
   </div>
